--- a/mundo-naturali/src/app/include/footer/footer.component.html
+++ b/mundo-naturali/src/app/include/footer/footer.component.html
@@ -13,10 +13,10 @@
           <div class="footer_social_media">
             <div class="inner_footer_social_media">
               <ul>
-                <li><a href="" class="facebook"><span></span></a></li>
-                <li><a href="" class="instagrame"><span></span></a></li>
-                <li><a href="" class="twitter"><span></span></a></li>
-                <li><a href="" class="youtube"><span></span></a></li>
+                <li><a href="" class="facebook"><span><i class="fa-brands fa-facebook-f"></i></span></a></li>
+                <li><a href="" class="instagrame"><span><i class="fa-brands fa-instagram"></i></span></a></li>
+                <li><a href="" class="twitter"><span><i class="fa-brands fa-twitter"></i></span></a></li>
+                <li><a href="" class="youtube"><span><i class="fa-brands fa-youtube"></i></span></a></li>
               </ul>
             </div>
           </div>
