--- a/mundo-naturali/src/app/pages/home/section/shop/shop.component.css
+++ b/mundo-naturali/src/app/pages/home/section/shop/shop.component.css
@@ -58,6 +58,7 @@
   margin-right: 30px;
 }
 .top_filter_shop_section_areas {
+  border-bottom:1px solid #CCCBCB;
   background: #FBFAF4;
   padding-top: 20px;
   padding-bottom: 10px;
@@ -73,7 +74,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  height: 190px;
 }
 .regular_price>h4 {
   color: #B3B3B3;
@@ -153,4 +154,319 @@
 }
 .slider_section_products{
   margin-bottom: 80px;
+}
+.product_cards {
+  cursor: pointer;
+  transition: 0.5s;
+  width: 94%;
+  margin: 15px auto;
+  padding: 15px 15px;
+}
+.product_cards:hover {
+  box-shadow: 1px 0px 8px 2px #00000027;
+
+  border-radius: 10px;
+}
+.mt-50{
+  margin-top: 50px;
+}
+.auto_width .product_cards{
+  width: 100%;
+}
+.product_thumbnail {
+  overflow: hidden;
+}
+/*side-ber*/
+.col-0-width {
+  width: 0px;
+  display: none;
+}
+.side_ber_shop_filter {
+  position: relative;
+  background: #fbfaf4;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9;
+  border-right: 1px solid #CCCBCB;
+}
+.shop_section_areas {
+  position: relative;
+}
+/*
+chek box*/
+.form-group > label {
+  color: #4E4D4D;
+}
+.new {
+  padding: 10px 15px;
+}
+.side_sect_head>h4 {
+  color: #4E4D4D;
+  font-size: 16px;
+}
+.form-group {
+  display: block;
+  margin-bottom: 15px;
+}
+
+.form-group input {
+  padding: 0;
+  height: initial;
+  width: initial;
+  margin-bottom: 0;
+  display: none;
+  cursor: pointer;
+}
+
+.form-group label {
+  position: relative;
+  cursor: pointer;
+}
+
+.form-group label:before {
+  content:'';
+  -webkit-appearance: none;
+  background-color: transparent;
+  border: 2px solid #000000;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 10px;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  cursor: pointer;
+  margin-right: 5px;
+  border-radius: 6px;
+}
+
+.form-group input:checked + label:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 4px;
+  left: 9px;
+  width: 6px;
+  height: 14px;
+  border: solid #6B922D;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.list_cat>ul {
+  padding-left: 0;
+  list-style: none;
+  margin-bottom: 0;
+}
+.list_cat>ul>li>a {
+  display: flex;
+  text-decoration: none;
+  color: #676767;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.new {
+  border-bottom: 1px solid #CCCBCB;
+}
+
+.main_all_col {
+  display: flex;
+}
+.col_item {
+  margin-right: 13px;
+}
+.form-group.roundd  label:before {
+  content:'';
+  -webkit-appearance: none;
+  background-color: transparent;
+  border: 2px solid #000000;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 10px;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  cursor: pointer;
+  margin-right: 5px;
+  border-radius: 100px;
+}
+.form-group.roundd>label {
+  color: #000000 !important;
+}
+
+.form-group.roundd>label>span {
+  color: #989898;
+}
+/*range-slider*/
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 300px; /* Full-width */
+  height: 3px; /* Specified height */
+  background: #000000; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+.main-product-sections{
+  position: relative;
+}
+.main-product-sections {
+padding-top: 0px;
+}
+.transition_sideber{
+  transition: 0.5s;
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  border-radius: 100px;
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 15px; /* Set a specific slider handle width */
+  height: 15px; /* Slider handle height */
+  background: #fbfaf4; /* Green background */
+  border: 1px solid #000;
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  border: 1px solid #000;
+  border-radius: 100px;
+  width: 15px; /* Set a specific slider handle width */
+  height: 15px; /* Slider handle height */
+  background: #fbfaf4; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.side_sect_head>h4 {
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+.side_sect_head {
+
+display: flex;
+justify-content: space-between;
+}
+
+.close_btns {
+  position: absolute;
+  right: 20px;
+  color: #6B922D;
+  font-size: 30px;
+  top: 10px;
+  cursor: pointer;
+}
+.inner_side_ber_shop_filter {
+  padding-top: 40px;
+}
+
+
+
+
+@media only screen and (max-width: 790px) and (min-width: 300px) {
+  span.humberger_text {
+    display: none;
+  }
+
+  .filter_wraperss>a {
+    width: 92% !important;
+  }
+  .count_labels {
+    margin-right: 0;
+}
+.tag_tools> ul> li > a{
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  border: 1px solid #E6E5E5;
+  padding: 6px 5px;
+  border-radius: 100px;
+  line-height: 1;
+}
+span.tools_text {
+  font-size: 12px;
+}
+span.tools_icon {
+  font-size: 9px;
+}
+
+
+.tag_tools>ul>li {
+  margin: 0px 2px !important;
+}
+
+span.tools_icon {
+  margin-right: 3px !important;
+}
+
+.count_labels>h4 {
+  font-size: 12px !important;
+}
+.filter_wraperss > a > span > img {
+  width: 20px;
+}
+.filter_wraperss> a{
+
+  padding: 10px 6px;
+
+}
+.cart {
+
+  height: 24px;
+  width: 24px;
+
+}
+.cart > span{
+  line-height: 20px;
+  font-size: 14px;
+}
+.tag_tools {
+  width: 100%;
+}
+
+
+.tag {
+
+  padding: 0px 8px;
+
+  font-size: 10px;
+}
+.humberger_icon{
+  margin-right: 0;
+}
+.inner_sale_price_wrapers> h4 {
+  font-size: 19px;
+
+}
+}
+@media only screen and (max-width: 590px) and (min-width: 300px) {
+  .col-md-9.active_expand_dash_board {
+  display: none;
+}
+.inner-main-product-sections .col-md-9 {
+  display: none;
+}
+.transition_sideber.col-md-3 {
+  padding-left: 0px;
+}
+.filter_wraperss>a {
+
+text-align: center;
+align-items: center;
+justify-content: center;
+}
 }
