--- a/mundo-naturali/src/styles.css
+++ b/mundo-naturali/src/styles.css
@@ -7,3 +7,41 @@
 body{
     font-family: "Source Sans 3", sans-serif !important;
 }
+
+.owl-prev {
+  position: absolute;
+  left: -55px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: white !important;
+  color: #ED6C09 !important;
+  box-shadow: -7px 1px 12px 2px #00000024  !important;
+  width: 30px !important;
+  height: 30px !important;
+}
+.owl-next {
+  position: absolute;
+  right: -55px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: white !important;
+  color: #ED6C09 !important;
+  box-shadow: -7px 1px 12px 2px #00000024  !important;
+  width: 30px !important;
+  height: 30px !important;
+}
+.owl-prev .cart{
+  line-height: 30px;
+}
+.owl-next .cart{
+  line-height: 30px;
+}
+@media only screen and (max-width: 590px) and (min-width: 300px) {
+  .owl-next {
+    position: absolute;
+    right: 0px;
+  }
+  .owl-prev{
+    left: 0px;
+  }
+}
