--- a/mundo-naturali/src/app/include/footer/footer.component.html
+++ b/mundo-naturali/src/app/include/footer/footer.component.html
@@ -2,14 +2,14 @@
   <div class="inner_footer_section">
     <div class="container">
       <div class="row">
-        <div class="col-xl-8 col-lg-8 col-md-8">
+        <div class="col-xl-8 col-lg-8 col-md-8 col-12">
           <div class="inner_footer_wrapers">
             <div class="foots_cop_txt">
               <p>Copyrights 2019. Mundo Naturali. Todos los derechos reservados . Políticas de privacidad  • Términos y Condiciones  •  Ayuda</p>
             </div>
           </div>
         </div>
-        <div class="col-xl-4 col-lg-4 col-md-4">
+        <div class="col-xl-4 col-lg-4 col-md-4 col-12">
           <div class="footer_social_media">
             <div class="inner_footer_social_media">
               <ul>
