--- a/mundo-naturali/src/app/include/header/header.component.html
+++ b/mundo-naturali/src/app/include/header/header.component.html
@@ -2,14 +2,14 @@
   <div class="inner_header_section">
     <div class="container">
       <div class="row">
-        <div class="col-xl-3 col-lg-3 col-md-3">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-4">
           <div class="site_logo">
             <a href="" target="_blank" rel="noopener noreferrer" class="logo_link">
               <img src="../../../assets/img/logo.svg" alt="">
             </a>
           </div>
         </div>
-        <div class="col-xl-9 col-lg-9 col-md-9">
+        <div class="col-xl-9 col-lg-9 col-md-9 col-8">
           <div class="cart_operation_tools_wrapers">
             <div class="wrapers_cart_operation_tools">
               <ul>
