--- a/mundo-naturali/src/app/pages/home/section/banner/banner.component.html
+++ b/mundo-naturali/src/app/pages/home/section/banner/banner.component.html
@@ -7,12 +7,12 @@
       <div class="inner_banner__content">
         <div class="container">
           <div class="row">
-            <div class="col-xl-2 col-lg-2">
+            <div class="col-xl-2 col-lg-2 col-md-3 col-3">
               <div class="banner_logo">
                 <img src="../../../../../assets/img/comp-logo.png" alt="" srcset="">
               </div>
             </div>
-            <div class="col-xl-10 col-lg-10">
+            <div class="col-xl-10 col-lg-10  col-md-9 col-9">
               <div class="banner_main_content">
                 <div class="to_heading">
                   <h3>TINA&CO</h3>
@@ -35,8 +35,8 @@
   <div class="inner_banner_bars">
     <div class="container">
       <div class="row">
-        <div class="col-xl-3 col-lg-3"></div>
-        <div class="col-xl-6 col-lg-6">
+        <div class="col-xl-3 col-lg-3  col-md-0 col-0"></div>
+        <div class="col-xl-6 col-lg-6  col-md-12 col-12">
           <div class="banner_bottom_tools">
             <ul>
               <li><a href="">800 productos</a></li>
